--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prettybt",
-  "version": "1.0.1",
-  "description": "simple binary tree visualizer",
+  "version": "1.0.2",
+  "description": "Simple binary tree visualizer",
   "main": "js/pbt.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
